Bug 159854 - Trigger text is black on dark grey in Animation sidebar deck (dark mode)
Summary: Trigger text is black on dark grey in Animation sidebar deck (dark mode)
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
7.0.0.3 release
Hardware: x86-64 (AMD64) Linux (All)
: low minor
Assignee: Caolán McNamara
URL:
Whiteboard: target:24.8.0 target:24.2.2 target:7.6.6
Keywords: accessibility, bibisected, bisected, regression
Depends on:
Blocks: Sidebar-Animation Linux-Dark-Mode
  Show dependency treegraph
 
Reported: 2024-02-23 12:22 UTC by Stéphane Guillou (stragu)
Modified: 2024-03-05 14:41 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot on Ubuntu 22.04 + GNOME 42.9 (11.71 KB, image/png)
2024-02-23 12:22 UTC, Stéphane Guillou (stragu)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Stéphane Guillou (stragu) 2024-02-23 12:22:44 UTC
Created attachment 192727 [details]
Screenshot on Ubuntu 22.04 + GNOME 42.9

Steps:
0. OS is in dark mode
1. Open Impress
2. Insert shape
3. Right-click on shape > Animation
4. In sidebar, add any animation with "+"
5. Right-click on animation > Timing > Trigger > Start effect on click of > Shape 1 > OK

(alternatively, open attachment 160758 [details] and open the Animation sidebar deck)

Result: animation sidebar has Trigger text hardly readable, black on dark grey (depending on desktop environement colour choices for dark mode)

Repro on Ubuntu 22.04 + GNOME 42.9, but no repro on Windows 11.

Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: ef9e1116d1100af50d7b74dcee5155c81b7b50fb
CPU threads: 8; OS: Linux 6.5; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

Started in 7.0.0.0.alpha1, not reproduced in 6.4.7.2.

Bibisected with linux-64-7.0 to first bad build [9ff12c78a14275c103335bce76a0ddee5680ef49] which is:

commit 21e8ce9ab9a522d25e95773af59b7ccccaee4e54
author	Caolán McNamara 	Tue Mar 24 11:44:16 2020 +0000
committer	Caolán McNamara 	Mon Apr 06 21:24:40 2020 +0200
weld custom animation panel
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/91006

Caolán, can you please have a look?
Comment 1 Rafael Lima 2024-02-29 23:53:27 UTC
Does not happen with kf5. Text is light over a dark background. However, with kf5 there's a weird dark rectangle when the trigger is selected.

Tested with

Version: 7.6.5.2 (X86_64) / LibreOffice Community
Build ID: 60(Build:2)
CPU threads: 16; OS: Linux 6.5; UI render: default; VCL: kf5 (cairo+xcb)
Locale: pt-BR (pt_BR.UTF-8); UI: en-US
Ubuntu package version: 4:7.6.5-0ubuntu0.23.10.1
Calc: threaded
Comment 2 Caolán McNamara 2024-03-03 21:04:02 UTC
Text color is probably fairly arbitrary there at the moment. https://gerrit.libreoffice.org/c/core/+/164315 should do the right thing for the text color issue
Comment 3 Commit Notification 2024-03-04 08:38:01 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/c398fead74ee63c51d54fdb06f04438b2c3233e0

Resolves: tdf#159854 Trigger text is black on dark grey in Animation sidebar

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Caolán McNamara 2024-03-04 08:39:24 UTC
done in trunk, backport to 24.02 in gerrit
Comment 5 Commit Notification 2024-03-04 15:09:01 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/e05179628e3d6855451bcd7e861b25b25ce765d0

Resolves: tdf#159854 Trigger text is black on dark grey in Animation sidebar

It will be available in 24.2.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2024-03-04 15:09:06 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/1240e6ab49b4d2e8c6f61b94e92ec8a3ed430fbe

Resolves: tdf#159854 Trigger text is black on dark grey in Animation sidebar

It will be available in 7.6.6.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Stéphane Guillou (stragu) 2024-03-05 14:41:51 UTC
Thank you Caolán, looks good now in both dark and light mode in:

Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 9574a62add8e4901405e12117e75c86c2d2c2f21
CPU threads: 8; OS: Linux 6.5; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: CL threaded