Resolves: tdf#159854 Trigger text is black on dark grey in Animation sidebar

in dark mode

Change-Id: I2cbf9b7d14a501c309a02dd3080511f527f9e1d1
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/164276
Tested-by: Jenkins
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>